--- a/src/theme.yml
+++ b/src/theme.yml
@@ -1,11 +1,11 @@
 $schema: vscode://schemas/color-theme
-name: Dracula
-author: Zeno Rocha
+name: Theme_Name
+author: Alex Fanat
 maintainers:
-  - Derek P Sifford <dereksifford@gmail.com>
-semanticClass: theme.dracula
+  - Alex Fanat <alexdanut7@gmail.com>
+semanticClass: theme.Theme_Name
 semanticHighlighting: true
-dracula:
+Theme_Name:
   base:
     - &BG        '#282A36'
     - &FG        '#F8F8F2'
